# mini-game

./: CMakeLists.txt  README.md
app/: Ai.cpp  Ai.h  Main.cpp
doc/: Candidate Instructions.html
doc/Candidate Instructions_files/: 148-ecf432e170be870ad4bb.js.download  app.css  app.js.download  chargebee.js.download  gtm.js.download  js  js(1)  js(2)  vendor.js.download
src/: Common.h  InvalidArgumentError.h  Matrix.cpp  Matrix.h  Path.cpp  Path.h  PathFinder.cpp  PathNotFoundError.h  Position.cpp  Position.h
